--- a/Survey/source/styles/formal/_o-question-slider-vertical.scss
+++ b/Survey/source/styles/formal/_o-question-slider-vertical.scss
@@ -12,10 +12,6 @@
     overflow: visible;
 }
 
-.o-question-container.cover-off.config-complete {
-    height: calc(64vh - 10px);
-}
-
 .o-question-slider-vertical-control{
     position: relative;
     transform: rotate(-90deg);  
